0.4:
Add number helpers for dealing with 16/32bit signed/unsigned

0.3.1: 2017 March
Support building with musl libc

0.3: 2017 March
Add support for send_raw_request

0.2: 2016-09-09
Add explicit connection close() method

0.1: Initial release
Basic overage of libmodbus api