@@ -10,6 +10,7 @@ print("using lua-libmodbus compiled against libmodbus: ", mb.VERSION_STRING)
 local dev = mb.new_tcp_pi("localhost", 1502)
 print(dev:get_byte_timeout())
 print(dev:get_response_timeout())
+print(dev)
 dev:set_debug()
 --dev:set_error_recovery(mb.ERROR_RECOVERY_LINK, mb.ERROR_RECOVERY_PROTOCOL)
 --dev:set_error_recovery(mb.ERROR_RECOVERY_NONE)
